# ChangeLog for media-video/nvidia-settings
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/nvidia-settings/ChangeLog,v 1.52 2009/01/21 14:49:57 peper Exp $

*nvidia-settings-180.22 (21 Jan 2009)

  21 Jan 2009; Piotr Jaroszyński <peper@gentoo.org>
  +nvidia-settings-180.22.ebuild:
  Add 180.22.

*nvidia-settings-177.80 (13 Oct 2008)

  13 Oct 2008; Ricardo Mendoza <ricmm@gentoo.org>
  +nvidia-settings-177.80.ebuild:
  Version bump per #238969

*nvidia-settings-177.70 (28 Aug 2008)

  28 Aug 2008; Ricardo Mendoza <ricmm@gentoo.org>
  +nvidia-settings-177.70.ebuild:
  Version bump

*nvidia-settings-177.68 (27 Aug 2008)

  27 Aug 2008; Ricardo Mendoza <ricmm@gentoo.org>
  +nvidia-settings-177.68.ebuild:
  Added corresponding ebuild to latest beta package

*nvidia-settings-177.67 (22 Aug 2008)
*nvidia-settings-177.13 (22 Aug 2008)
*nvidia-settings-173.14.12 (22 Aug 2008)

  22 Aug 2008; Ricardo Mendoza <ricmm@gentoo.org>
  +nvidia-settings-173.14.12.ebuild, +nvidia-settings-177.13.ebuild,
  +nvidia-settings-177.67.ebuild:
  Version bumps. Added corresponding ebuilds for beta branch

*nvidia-settings-173.14.09 (29 Jun 2008)

  29 Jun 2008; Piotr Jaroszyński <peper@gentoo.org>
  nvidia-settings-1.0.20070621.ebuild, nvidia-settings-169.04.ebuild,
  nvidia-settings-169.07.ebuild, nvidia-settings-171.05.ebuild,
  nvidia-settings-173.08.ebuild, +nvidia-settings-173.14.09.ebuild:
  Add 173.14.09 and missing x11-proto/xf86vidmodeproto dep.

*nvidia-settings-173.08 (26 May 2008)

  26 May 2008; <chainsaw@gentoo.org> +nvidia-settings-173.08.ebuild:
  Version bump. Upstream no longer uses imake, simplify ebuild accordingly.

*nvidia-settings-171.05 (31 Mar 2008)

  31 Mar 2008; Piotr Jaroszyński <peper@gentoo.org>
  +nvidia-settings-171.05.ebuild:
  Add 171.05.

  06 Mar 2008; Olivier Crête <tester@gentoo.org> nvidia-settings-169.07.ebuild:
  Stable on amd64, bug #212536