@@ -1,6 +1,9 @@
 # ChangeLog for media-video/nvidia-settings
 # Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/nvidia-settings/ChangeLog,v 1.52 2009/01/21 14:49:57 peper Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/nvidia-settings/ChangeLog,v 1.53 2009/02/08 09:27:03 ricmm Exp $
+
+  08 Feb 2009; <ricmm@gentoo.org> +nvidia-settings-180.27.ebuild:
+  Version bump.
 
 *nvidia-settings-180.22 (21 Jan 2009)
 
